appId: any
---
- runScript: ../../config/appIds.js
- clearState: ${output.appIdUnderTest}
- launchApp: ${output.appIdUnderTest}
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: Views
      - scrollUntilVisible:
          element:
            text: TextFields
      - tapOn: TextFields
      - tapOn: hint text
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Text Fields"
      - tapOn: "Placeholder text"
- inputText: "First text"
- assertVisible:
    text: "First text"
    label: "Verify that 'First text' is visible in the first input field"
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Back"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "done"
- stopApp: ${output.appIdUnderTest}
